MDEV-6819 st_mysql_show_var::value should be void* not char*